# ask

./: .gitignore  README.md  fzf-browse.sh  pyproject.toml
.claude/: settings.local.json
ask-webkit/: Package.swift  README.md
ask-webkit/Sources/Ask/: Config.swift  HotKey.swift  OpencodeServer.swift  WebWindow.swift  main.swift
src/ask/: cli.py
src/ask.egg-info/: PKG-INFO  SOURCES.txt
src/commander/: cli.py
src/commander.egg-info/: PKG-INFO  SOURCES.txt
